<resources>
    <string name="app_name">Simple Maze Game</string>
    <string name="title_activity_main">Maze game</string>
    <string name="label_group_name">Nombre del servidor</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_create_group">Modo servidor</string>
    <string name="btn_join_group">Modo cliente</string>
    <string name="prgrss_searching_groups">Buscando servidores del juego ...</string>
    <string name="toast_not_found_groups">No se encontraron servidores ...</string>
    <string name="prgrss_connecting_to_group">Conectando con servidor ...</string>
    <string name="device_connected">%s dispositivo conectado</string>
    <string name="device_disconnected">%s dispositivo desconectado</string>
    <string name="pause">PAUSE</string>
    <string name="bot_op_01">3x3</string>
    <string name="bot_op_02">4x4</string>
    <string name="bot_op_03">5x5</string>
    <string name="bot_op_04">6x6</string>
    <string name="bot_op_05">7x7</string>
    <string name="bot_op_06">8x8</string>
    <string name="bot_op_07">9x9</string>
    <string name="bot_enter">Enter</string>
    <string name="edit_text_name">Name</string>

</resources>
